--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,12 +2,8 @@
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
-resources:
-  pipelines:
-  - pipeline: npadftest
-
 trigger:
-- adf-publish
+- main
 
 pool:
   vmImage: ubuntu-latest
